-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.0 Beta1
-
None
-
Linux x86_64
-
-
ede8545245377da0e770d6129be71cdc3ff5ad17 (qt/qtbase/5.15) 1edf586ed73596e1d53a0d612a77f86ea34a65bf (qt/qtbase/dev)
In file included from mimetypes/qmimetype.cpp:45: mimetypes/qmimeprovider_p.h: In constructor 'QMimeXMLProvider::QMimeXMLProvider(QMimeDatabasePrivate*, QMimeXMLProvider::InternalDatabaseEnum)': mimetypes/qmimeprovider_p.h:143:23: error: expected ';' before '}' token 143 | { Q_UNREACHABLE() }; | ^
| For Gerrit Dashboard: QTBUG-82547 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 292261,2 | QMimeXMLProvider: add missing semi-colon in the #else case | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
| 292706,2 | QMimeXMLProvider: fix another issue with -no-mimetype-database | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |